2002-10-14 garlick
	* Remove RESET_SCRIPT definitions in wti and baytech device files.
	* Got rid of Cluster and Node data structures.
	* Plug state is no longer global - seperate copy for each client cmd.
	* Fixed memory leaks in _create_client/_destroy_client.
	* Trimmed TODO file.

2002-10-11 garlick
	* Fix bug in vpcd where empty line would look like EOF on socket.

2002-10-08 garlick
	* Fixed bug where Action "found" client by client struct address, but
	  if client had died, address could still be valid.  Now we use a 
	  unique integer identifier to find client.
	* Made device read/write error handling a little cleaner.
	* Don't set plug state to unknown before querying status to avoid
	  triggering race described in FIXME comment in client.c _parse_input()
	* Tagged powerman-1-0-10.

2002-10-06 garlick
	* More man page edits.

2002-10-06 garlick
	* Updated hostlist.[ch] to latest from the pdsh sources.
	* Tagged powerman-1-0-9.

2002-10-06 garlick
	* _process_send can now time out.
	* Clean up device.c select handling a bit to make it clear why actions
	  will not time out if device is not connected. 
	* _handle_write now handles errors from buf_write.
	* Client now returns error on unimplemented commands.
	* Changed powerman "-z --report" option to "-q --query"
	* Added soft power status support to vpc, fixed login logic in vpc,
	  Added --soft-off test.
	* Don't clear wset bit after finish_connect unless fd != -1.
	* Tagged powerman-1-0-8.

2002-10-05 garlick
	* More man page updates
	* Updated TODO, moved README to doc/Overview.txt, removed Retagging.
	* Removed various outdated scripts in scripts subdir.
	* Added --off_rpc and --hung_rpc options to vpcd for testing.
	* Updated timeouts from 0.3 to 0.5 in icebox3.dev (determined to be
	  safe on MCR).

2002-10-04 garlick
	* Client now performs on and off command if executable is 
	  linked to "on" and "off".  Install links "on", "off", and "pm"
	  in spec file.